--- a/index.html
+++ b/index.html
@@ -14,6 +14,37 @@
 
   </head>
   <body>
-
+    <main>
+      <section class="container">
+        <!-- title -->
+        <div class="title">
+          <h2>Funny reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- review -->
+        <article class="review">
+          <div class="img-container">
+            <img src="https://images.pexels.com/photos/3771127/pexels-photo-3771127.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" 
+                id="person-img" alt="" />
+          </div>
+          <h4 id="author"><!-- Cassie Davidson --></h4>
+          <p id="job"><!-- ux designer --></p>
+          <p id="info">
+            <!-- As a UX developer i was very impressed on the way the UI and UX transitioned to fluid. -->
+          </p>
+          <!-- prev next buttons-->
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="next-btn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+          <!-- random button -->
+          <button class="random-btn">surprise me</button>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
